# mywine

./: .gitignore  pyproject.toml  requirements.txt
community/: admin.py  forms.py  models.py  urls.py  views.py
community/migrations/: 0001_initial.py  0002_notice.py  0003_rename_author_post_user_alter_post_tasting_note.py
community/templates/community/: comment_confirm_delete.html  home.html  notice_list.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
config/: settings.py  urls.py  views.py
dashboard/: views.py
dashboard/templates/dashboard/: statistics.html
gallery/: models.py  views.py
gallery/migrations/: 0002_gallery_delete_tastingnote.py
gallery/templates/gallery/: gallery.html
notes/: admin.py  forms.py  models.py  urls.py  views.py
notes/migrations/: 0001_initial.py  0002_tastingnote_aroma_intensity.py  0003_tastingevent_date.py
notes/templates/notes/: calendar.html  collection.html  create_note.html  note_detail.html  note_detail_modal.html  note_detail_modal_modify.html  note_form.html  notes_by_date.html
static/css/: calendar.css  collection.css  create_note.css  login.css  profile.css  signup.css  statistics.css  style.css
static/js/: note_detail.js
staticfiles/css/: community.css  gallery.css  modal.css  profile_edit.css
staticfiles/js/: calendar.js  collection.js  create_note.js  home.js  statistics.js
templates/: base.html  landing.html
users/: apps.py  create_profiles.py  forms.py  models.py  pipeline.py  urls.py  views.py
users/migrations/: 0005_alter_profile_bio_alter_profile_user.py
(+10 files in other folders)
